Thu Oct 18 22:46:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.h:
	* ace/TP_Reactor.cpp: Fixed warnings in Sun CC and TRU 64 builds. 

Thu Oct 18 20:42:55 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Fixed Unicode build errors.

Thu Oct 18 19:52:44 2001  Craig Rodrigues <crodrigu@bbn.com>

	* ace/SString.h: clarify example in comments to ACE_Tokenize
           so that constant strings are not passed in its constructor.

	* examples/OS/Process/process.cpp: do not pass constant strings
	   to ACE_Tokenize constructor.  Thanks to 
	   Werner Buchert <w.buchert@medat.de> and 
	   Don Hinton <dhinton@swan.fr>.

Wed Oct 17 23:56:45 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:
	* tests/Proactor_Test.dsp:

	  Proactor test contributed by Alexander Libman
	  <alibman@baltimore.com>.

	* tests/tests.dsw:

	  Added Proactor_Test project to the tests workspace.

Wed Oct 17 18:59:53 2001  Christopher Kohlhoff  <chris@kohlhoff.com>

        * include/makeinclude/install.bor:
          Borland makefile fix to ensure that, when doing the install
          target, core executables are built correctly if they don't
          already exist.

Wed Oct 17 16:00:19 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Graeme Clark to the Hall of Fame.

Wed Oct 17 15:49:20 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp:
	* ace/TP_Reactor.h: Added remove_handler () calls to the
	  TP_Reactor.  Before this, the  call on the reactor used to be
	  handled by the Select_Reactor's implementation. The
	  implementation has a problem. It tries to call handle_close ()
	  (an upcall) as one of the calls after holding the token. This
	  was asking for trouble. This could lead to deadlocks as
	  mentioned in [BUG ID 1055]. 

	  The method in the TP_Reactor now calls remove_handler () on the
	  Select_Reactor (its base class) with a DONT_CALL flag. Then it