@@ -1,3 +1,10 @@
+Thu Oct 18 20:56:53 2001  Ossama Othman  <ossama@uci.edu>
+
+	* tests/Proactor_Test.cpp:
+
+	  Added no-op main() function for platforms that do not support
+	  asynchronous IO.
+
 Thu Oct 18 22:46:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* ace/TP_Reactor.h:
